test/errors/string_builtins.li
println("Hello, World!".find("World", 10));
